welcome.lessons.welcome.instructions.Instructions.scala.code
baissebrosse()
avance()
avance()
droite()
droite()
recule()
recule()
gauche()
gauche()
levebrosse()
avance()
droite()